hphp/test/slow/attributes/soft/soft_no_args.php.expectf
Fatal error: The `__Soft` attribute does not take arguments. in %s/test/slow/attributes/soft/soft_no_args.php on line 3
